# USTC_MM_24

./: .gitignore  .gitmodules  README.md
Final/blender/: main.blend
Final/code/: main.ipynb
Final/code/SFMedu2/: SFMedu2.m  dense.ply
Final/report/: main.typ
HW1/: main.ipynb  main.py  main.typ  seam_carving.m
HW1/report/: main.typ
HW2/: CMakeLists.txt  main.cpp
HW2/code/: CMakeLists.txt  main.cpp
HW2/code-py/: main.py  requirements.txt
HW2/report/: code-py  main.typ
HW3/code/: model.h5  train.ipynb  train.py
HW3/report/: main.typ
HW4/code/: R_inf.py  SEIR_euler.py  SEIR_simulation.py  SIR_euler.py  main.ipynb
HW4/code/data/: WHO-COVID-19-global-data.csv  WHO-COVID-19-global-table-data.csv  vaccination-data.csv
HW4/report/: main.typ  output
HW5/blender/: main.blend1
HW5/code/SFMedu2/: sparse.ply
